[tool.poetry]
name = "remove-s3-buckets-with-object-deletion"
version = "0.1.0"
description = ""
authors = ["Keisuke Nishitani"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.13.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
